--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,19 @@
   margin: 0;
   padding: 0;
 }
+
+.search{
+  background-color: violet;
+  padding: 10px;
+  text-align: center;
+}
+
+.search input[type="text"]{
+  background-color: #fff;
+  border: 0;
+  border-radius: 10px;
+  padding: 10px;
+  width: 50%;
+  font-size: 16px;
+  color: black;
+}
