--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .search{
   background-color: rgb(180, 95, 180);
-  padding: 10px;
+  padding: 0px 0 15px 0;
   text-align: center;
   position: relative;
 }
